--- a/Password Generator.html
+++ b/Password Generator.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-    
-        
-        <script src="index.js" async defer></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+
+    <div class="hero">
+        <h1>RANDOM PASSWORD GENERATOR</h1>
+        <h2>Password security? We got you covered!</h2>
+        <button class="btn-gen" onclick="generate()">Generate</button>
+    </div>
+
+    <div class="container">
+
+        <p id="first-password">pending...</p>
+
+        <p id="second-password">-pending...-</p>
+
+    </div>
+
+
+    <script src="index.js" async defer></script>
+</body>
+
 </html>
