--- a/Password Generator.html
+++ b/Password Generator.html
@@ -12,20 +12,20 @@
 
 <body>
 
-
-    <div class="hero">
-        <h1>RANDOM PASSWORD GENERATOR</h1>
-        <h2>Password security? We got you covered!</h2>
-        <button class="btn-gen" onclick="generate()">Generate</button>
+    <div class="allcontainer">
+        <div class="hero">
+            <h1>RANDOM PASSWORD GENERATOR</h1>
+            <h2>Password security? We got you covered!</h2>
+            <button class="btn-gen" onclick="generate()">Generate</button>
+        </div>
+    
+        <div class="container">
+            <p id="first-password">pending...</p>
+            <p id="second-password">pending...</p>
+        </div>
+    
     </div>
 
-    <div class="container">
-
-        <p id="first-password">pending...</p>
-
-        <p id="second-password">-pending...-</p>
-
-    </div>
 
 
     <script src="index.js" async defer></script>
