Migrated to TypeScript

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="hero">
             <h1>RANDOM PASSWORD GENERATOR</h1>
             <h2>Password security? We got you covered!</h2>
-            <button class="btn-gen" onclick="generate()">Generate</button>
+            <button class="button-gen">Generate</button>
             <div class="container">
                 <p id="first-password">pending...</p>
                 <p id="second-password">pending...</p>
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <script src="index.js" async defer></script>
+    <script src="index.ts" async defer></script>
 </body>
 
 </html>
