--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <script src="index.ts" async defer></script>
+    <script src="index.js" async defer></script>
 </body>
 
 </html>
