--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="allcontainer">
-        <div class="hero">
-            <h1>RANDOM PASSWORD GENERATOR</h1>
-            <h2>Password security? We got you covered!</h2>
-            <button class="button-gen">Generate</button>
-            <div class="container">
-                <p id="first-password">pending...</p>
-                <p id="second-password">pending...</p>
-            </div>
+      <div class="hero">
+        <h1>RANDOM PASSWORD GENERATOR</h1>
+        <h2>Password security? We got you covered!</h2>
+        <button class="button-gen" id="button-gen">Generate</button>
+        <div class="container">
+          <p id="first-password">pending...</p>
+          <p id="second-password">pending...</p>
         </div>
+      </div>
     </div>
 
     <script src="index.js" async defer></script>
-</body>
-
+  </body>
 </html>
